# gltutorials

./: .gitignore  CMakeLists.txt  default.cpp  window.cpp
Assets/: core.frag  core.vert  def.frag  def.vert
Headers/: EBO.cpp  EBO.h  Libs.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  objloader.h  shader.h  sources.cpp  texture.cpp  texture.h
Random/: Makefile  glffw.h  main  main.cpp  shader.h  text.cpp  video_reader.hpp
src/: main.cpp  shader.h  text.cpp
src/tut1/: tut1_shader.cpp
src/tuts/: cameras.cpp  textures.cpp  tut1_shader.cpp
